<resources>
    <string name="app_name">KENKEN</string>
    <string name="game_title">KenKen</string>
    <string name="start_game">Start</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="apply">Apply</string>
    <string name="background">Background</string>
    <string name="select_game_dialog_title">Select a game</string>
    <string name="game_option_summary">"Game #%1$d: Size = %2$d (%3$s)"</string>
    <string name="puzzle_table">Puzzle Table</string>
    <string name="clear">CLEAR</string>
    <string name="proceed_anyway">Proceed Anyway</string>
    <string name="puzzle_solved_dialog_title">Congratulation!</string>
    <string name="puzzle_solved_msg_html">
        Size: %1$d
        &lt;br>Difficulty: %2$s
        &lt;br>Time: %3$s
        &lt;br>Mistake: %4$d
        &lt;br>Hint used: %5$d
        &lt;br>&lt;b>Final score: %6$d&lt;/b>
    </string>
    <string name="back_to_main">Back</string>
    <string name="switch_game">Switch</string>
    <string name="game_rule_dialog_title">
        Rules For Playing KenKen
    </string>
    <string name="game_rule">
        ○ The numbers you use in a KenKen puzzle depends on the size of the puzzle grid you choose.
        A 4 x 4 grid (4 squares across, 4 squares down) means you use the numbers 1, 2, 3 and 4.
        In a 6 x 6 grid, use the numbers 1 to 6. An 8x8 grid requires you use the numbers 1 to 8, and so on.
        \n○ The numbers in each heavily outlined set of squares, called cages, must combine (in any order)
        to produce the target number located in the top corner of that cage using the mathematics operation
        indicated (+, -, ×, ÷, etc.).
        \n○ The goal is to fill in all the squares so that each number is used in each row and column
        and no numbers are repeated in any row or column.
        \n
        \nThe final score is calculated based on the difficulty of the puzzle as well as
        the amount of time, the number of mistakes and the number of hint used.
    </string>
    <string name="back_to_main_dialog_title">Back to main</string>
    <string name="back_to_main_dialog_msg">
        Are you sure to return to main menu?
    </string>
    <string name="back_to_main_dialog_warning_msg">
        Are you sure to return to main menu?
        \nYou will lose your current progress if you proceed.
    </string>
    <string name="cell_number_select_dialog_title_format">
        Select a number (Cage: %1$s)
    </string>
    <string name="record_initial">Record: 0</string>
    <string name="record_format">Record: %1$d</string>
    <string name="mistake_initial">Mistake: 0</string>
    <string name="mistake_format">Mistake: %1$d</string>
    <string name="hint_initial">
        HINT
        \n0/0
    </string>
    <string name="hint_format">
        HINT
        \n%1$d/%2$d
    </string>
    <string name="hint_dialog_title">Hint</string>
    <string name="hint_dialog_msg_new_number_html">
        Row: %1$d
        &lt;br>Column: %2$d
        &lt;br>Cage: %3$s
        &lt;br>&lt;b>Number: %4$d&lt;/b>
    </string>
    <string name="hint_dialog_msg_fix_number_html">
        Row: %1$d
        &lt;br>Column: %2$d
        &lt;br>Cage: %3$s
        &lt;br>&lt;b>Number: &lt;font color=\'red\'>%4$d&lt;/font> —> %5$d&lt;/b>
    </string>
    <string name="hint_dialog_no_hint_msg">
        No hint available
    </string>
    <string name="stopwatch_initial_time">00:00:00</string>
    <string name="title_show_rule_preference">Show rule on start</string>
    <string name="hint_progress_dialog_title">Calculating hint</string>
    <string name="hint_progress_dialog_msg">Please wait a moment!</string>

    <!-- Preference Keys -->
    <string name="preference_show_rule">preference::show-rule</string>

    <!-- New Theme Toggle Preference -->
    <string name="title_change_theme_preference">Change Theme</string>
    <string name="summary_enable_light_theme">Enable light theme</string>
    <string name="summary_enable_dark_theme">Enable dark theme</string>
    <string name="preference_theme">preference::theme</string>
</resources>